--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script type="text/javascript"
+			src="https://www.dropbox.com/static/api/2/dropins.js"
+			id="dropboxjs"
+			data-app-key="3p019xr3e3jhfqb"></script>
     <title>IctoPlayer</title>
   </head>
   <body>
